cmake_minimum_required(VERSION 3.25)
project(cpp_course)

set(CMAKE_CXX_STANDARD 23)

add_executable(cpp_course 2_OOP/1_Car/Car.hpp 2_OOP/1_Car/Car.cpp 2_OOP/1_Car/main.cpp 1_Grundlage/fibonacci.cpp 2_OOP/2_Place/Place.hpp 2_OOP/2_Place/Place.cpp 2_OOP/2_Place/main.cpp 2_OOP/2_Place/Sights.hpp 2_OOP/2_Place/Sights.cpp 2_OOP/2_Place/Toilets.hpp 2_OOP/2_Place/Toilets.cpp 2_OOP/3_Person/Person.hpp 2_OOP/3_Person/Person.cpp 2_OOP/3_Person/main.cpp 2_OOP/3_Person/Professor.cpp 2_OOP/3_Person/Student.hpp 2_OOP/3_Person/Student.cpp)
