cmake_minimum_required(VERSION 3.25)
project(cpp_course)

set(CMAKE_CXX_STANDARD 23)

add_executable(cpp_course 2_OOP/1_Car/Car.hpp 2_OOP/1_Car/Car.cpp 2_OOP/1_Car/main.cpp 1_Grundlage/fibonacci.cpp 2_OOP/2_Place/Place.hpp 2_OOP/2_Place/Place.cpp 2_OOP/2_Place/main.cpp 2_OOP/2_Place/Sights.hpp 2_OOP/2_Place/Sights.cpp 2_OOP/2_Place/Toilets.hpp 2_OOP/2_Place/Toilets.cpp 2_OOP/3_Person/Person.hpp 2_OOP/3_Person/Person.cpp 2_OOP/3_Person/main.cpp 2_OOP/3_Person/Professor.cpp 2_OOP/3_Person/Student.hpp 2_OOP/3_Person/Student.cpp 2_OOP/3_Person/MailHandler.hpp 2_OOP/3_Person/MailHandler.cpp 2_OOP/4_User/User.hpp 2_OOP/4_User/User.cpp 2_OOP/4_User/main.cpp 2_OOP/5_Bankaccount/Bankaccount.hpp 2_OOP/5_Bankaccount/Bankaccount.cpp 2_OOP/5_Bankaccount/main.cpp 2_OOP/5_Bankaccount/Girokonto.hpp 2_OOP/5_Bankaccount/Girokonto.cpp 2_OOP/5_Bankaccount/Tagesgeldkonto.hpp 2_OOP/5_Bankaccount/Bausparvertrag.hpp 2_OOP/5_Bankaccount/Tagesgeldkonto.cpp 2_OOP/5_Bankaccount/Bausparvertrag.cpp 2_OOP/5_Bankaccount/Bank.hpp 2_OOP/5_Bankaccount/Bank.cpp 2_OOP/6_STL/main.cpp 2_OOP/6_STL/list.cpp)
